@@ -21,11 +21,11 @@ int main (void)
   
   PASS(CFNumberGetValue(num1, kCFNumberSInt8Type, &i8),
     "Integer converted to SInt8.");
-  PASS(i8 == -5, "SInt32 converted to SInt8 correctly.");
+  PASS(i8 == -5, "SInt32 converted to SInt8 (%d) correctly.", i8);
   
   PASS(CFNumberGetValue(num2, kCFNumberSInt32Type, &i32),
     "Char converted to SInt32.");
-  PASS(i32 == 7, "SInt8 converted to SInt32 correctly.");
+  PASS(i32 == 7, "SInt8 converted to SInt32 (%d)correctly.", i32);
   
   CFRelease (num1);
   CFRelease (num2);
@@ -40,15 +40,16 @@ int main (void)
   
   PASS(CFNumberGetValue(num1, kCFNumberFloatType, &f),
     "Short converted to float.");
-  PASS(f == 6.0, "Short converted to float correctly.");
+  PASS(f == 6.0, "Short converted to float (%f) correctly.", f);
   
   /* Lossy conversion so returns false... */
   PASS(CFNumberGetValue(num2, kCFNumberSInt16Type, &i16) == false,
     "Float converted to short.");
-  PASS(i16 == 3, "Float converted to short correctly.");
+  PASS(i16 == 3, "Float converted to short (%d) correctly.", i16);
   
   CFRelease (num1);
   CFRelease (num2);
   
   return 0;
 }
+
